[package]
name = "cohoard"
version = "0.7.0"
edition = "2021"
description = "turn chatlogs into formatted posts for cohost"
repository = "https://github.com/a2aaron/Cohoard"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cohoard"
crate-type = ["cdylib"]

[dependencies.cohoard_rs]
path = "../cohoard_rs"
version = "*"

[dependencies]
wasm-bindgen = { version = "0.2.83" }
tera = { version = "1.16.0", default-features = false } # note: tera needs no default features or else it won't compile
serde_json = "1.0.83"
serde-wasm-bindgen = "0.4.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
# These options don't seem to reduce file size any amount.
# panic = "abort"
# split-debuginfo = "packed"
# strip = "debuginfo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[profile.dev]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# enable debug info in the generated binary
# note that this isn't possible to enable this option in release mode
# specifically: you can't run wasm-opt and dwarf-debug-info at the same
# time. however, if we want debug symbols and a decent amount of optimization
# then enabling (rustc) optimizations will get us close to release mode.
dwarf-debug-info = true